Lab_act2_Greatest_Number_Palomera_Micabalo

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /Palomera_IT113B_Activities_101/nbproject/private/
+/Palomera_IT113B_Activities_101/JavaApplication27/nbproject/private/
+/Palomera_IT113B_Activities_101/Lab_Act2_Greatest_Number/nbproject/private/
+/Palomera_IT113B_Activities_101/build/
+/Palomera_IT113B_Activities_101/dist/
